--- a/src/Pages/Pokedex/Pokedex.scss
+++ b/src/Pages/Pokedex/Pokedex.scss
@@ -10,7 +10,7 @@
   background-color: $mainColor;
   display: grid;
   grid-template-columns:  1fr 2.5fr;
-  height: 100vh;
+  // height: 100vh;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 5px 55px inset;
   }
   
