--- a/src/Pages/Pokemon/Pokemon.scss
+++ b/src/Pages/Pokemon/Pokemon.scss
@@ -2,7 +2,7 @@
 
 .pokemon-detail-container{
     background-color: $mainColor;
-    height: 100vh;
+    // height: 100vh;
     display: flex;
     justify-content: center;
 
