--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -7,7 +7,6 @@ $purple: #2c2c57;
 // $orange: #FF9066;
 $white: #fff;
 // $black: #000;
-// $green: #4CAF50;
 // ------------------
 
 $fire: "#f9766c";
@@ -34,7 +33,8 @@ $fontFamily: 'Roboto', sans-serif;
 
 $fontSizeSmall: 1rem;
 $fontSizeNormal: 1.125rem;
-$fontSizeMedium: 1.25rem;
+// $fontSizeMedium: 1.25rem;
+$fontSizeMedium: 2rem;
 $fontSizeLarge: 2.5rem;
 
 $sideBarWidth: 384px;
