--- a/src/Components/PokemonCard/PokemonCard.scss
+++ b/src/Components/PokemonCard/PokemonCard.scss
@@ -1,9 +1,10 @@
 @use '../../scss/abstracts/' as *;
 
-.item {
-    background-color: $purple;
+.card {
+    // background-color: $purple;
+    background-color: rgba(255, 255, 255, 0.059);;
     display: flex;
-    align-items: center;
+    align-cards: center;
     justify-content: center;
     border-radius: 2.5rem;
     padding: 30px;
@@ -12,11 +13,11 @@
     transition: 0.2s ease box-shadow;
   }
   
-  .item:hover {
+  .card:hover {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   
-  .item h3 {
+  .card h3 {
     font-size: 16px;
     font-weight: 400;
     color: $white;
@@ -45,11 +46,11 @@
     font-size: 15px;
   }
   
-  .item > img {
+  .card > img {
     width: 150px;
   }
   
-  .item > h2 {
+  .card > h2 {
     font-size: 30px;
     color: $white;
   }
