--- a/src/Components/PokemonDetailCard/PokemonEvolutionView/PokemonEvolutionView.scss
+++ b/src/Components/PokemonDetailCard/PokemonEvolutionView/PokemonEvolutionView.scss
@@ -1,13 +1,11 @@
-
-
-// .view{
-//     width: 100%;
-// }
-
 .cards-container {
-    overflow: auto;
     display: grid;
+    gap: 15px;
+    grid-auto-rows: 250px;
     grid-gap: 1rem;
-    height: 22rem;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    height: auto;
     padding: 1rem 0;
+    row-gap: 15px;
+    width: 100%;
   }
