--- a/src/Components/PokemonsList.js/PokemonList.scss
+++ b/src/Components/PokemonsList.js/PokemonList.scss
@@ -9,8 +9,11 @@
 
     .gallery-container{
       height: 20rem;
-      background-color: rgb(194, 194, 194);
+      // background-color: rgb(194, 194, 194);
       border-radius: 2.5rem;
+      background-image: url("../../Assets/images/pokemongames-banner.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
     .pokemons-container__title {
@@ -18,14 +21,19 @@
     }
   }
 
-.cards-container {
-  overflow: auto;
+.cards-container-pokedex {
   display: grid;
+  gap: 15px;
+  grid-auto-rows: 250px;
   grid-gap: 1rem;
-  height: 22rem;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  height: auto;
   padding: 1rem 0;
+  row-gap: 15px;
+  width: 100%;
 }
 
+// Custom scrollbar
 ::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
