--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -9,9 +9,8 @@
   background-color: #2c2c57;
   grid-row-start: 1;
   grid-row-end: 1;
-  height: 90%;
+  height: auto;
   border-radius: 2.5rem;
-  justify-content: space-between;
 
   &__header {
     display: flex;
@@ -28,6 +27,10 @@
       align-items: center;
     }
   }
+
+  .types_container{
+    margin-top: 2rem;
+  }
 }
 
   .button__container{
@@ -36,3 +39,5 @@
     align-items: center;
     height: 2rem;
   }
+
+ 
