--- a/src/Components/PokemonsList.js/PokemonList.scss
+++ b/src/Components/PokemonsList.js/PokemonList.scss
@@ -1,7 +1,7 @@
 @use '../../scss/abstracts/' as *;
 
 .main-container {
-    // grid-area: main-container;
+    grid-area: main-container;
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -9,7 +9,6 @@
 
     .gallery-container{
       height: 20rem;
-      // background-color: rgb(194, 194, 194);
       border-radius: 2.5rem;
       background-image: url("../../Assets/images/pokemongames-banner.jpg");
       background-repeat: no-repeat;
