create sidebar with transition

--- a/src/Components/ButtonType/Buttontype.scss
+++ b/src/Components/ButtonType/Buttontype.scss
@@ -6,7 +6,8 @@
     cursor: pointer;
     transition: 0.2s ease box-shadow;
     color: #fff;
-    font-size: 1.2rem;
+    font-size: $fontSizeNormal;
+    // font-size: 1.2rem;
     border: none;
     background-color: transparent;
     height: 100%;
