--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -61,3 +61,11 @@ h3 {
 p {
     color: $white;
 }
+
+
+@media (max-width:  768px) {
+    h2 {
+        font-size: $fontSizeNormalBigger;
+        // color: $white;
+    }
+  }
