--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -33,6 +33,7 @@ $fontFamily: 'Roboto', sans-serif;
 
 $fontSizeSmall: 1rem;
 $fontSizeNormal: 1.125rem;
+$fontSizeNormalBigger: 1.5rem;
 // $fontSizeMedium: 1.25rem;
 $fontSizeMedium: 2rem;
 $fontSizeLarge: 2.5rem;
