--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,43 +1,36 @@
 @use '../../scss/abstracts/' as *;
+// nav-menu active" : "nav-menu
 
-.sidebar {
-  margin-top: 1.5rem;
-  grid-area: sidebar;
-  display: flex;
-  padding: 3rem 2rem;
-  flex-direction: column;
-  background-color: #2c2c57;
-  grid-row-start: 1;
-  grid-row-end: 1;
-  height: auto;
-  border-radius: 2.5rem;
-
-  &__header {
+.nav-menu{
+    background-color: $purple;
+    width: 100%;
+    height: 100vh;
     display: flex;
-    justify-content: space-between;
-    color: $white;
+    justify-content: center;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    transition: .85s;
+    z-index: 2;
+    max-width: 25rem;
+    padding: 2rem;
 
-    .circle-type {
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      margin-right: 4px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    .sidebar__header{
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
     }
-  }
-
-  .types_container{
-    margin-top: 2rem;
-  }
 }
 
-  .button__container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 2rem;
-  }
+.nav-menu.active {
+    left: 0;
+    transition: .35s;
+}
 
- 
+@media (max-width:  768px) {
+    .nav-menu{
+        max-width: 25rem;
+        padding: 1rem 2rem 1rem 3rem;
+    }
+}
