--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,13 +1,8 @@
 $bodyBg: #F3F4FA;
-// $mainBg: #fff;
 $mainColor: #27254c;
-$txtColor: #4E4D4F;
 $lightPurple: #9c99cb;
 $purple: #2c2c57;
-// $orange: #FF9066;
 $white: #fff;
-// $black: #000;
-// ------------------
 
 $fire: "#f9766c";
 $grass: "#2cdbb2";
@@ -31,10 +26,10 @@ $ice: "#a4eaea";
 
 $fontFamily: 'Roboto', sans-serif;
 
-$fontSizeSmall: 1rem;
+$fontSizeSmaller: 1rem;
+$fontSizeSmall: 1.2rem;
 $fontSizeNormal: 1.125rem;
 $fontSizeNormalBigger: 1.5rem;
-// $fontSizeMedium: 1.25rem;
 $fontSizeMedium: 2rem;
 $fontSizeLarge: 2.5rem;
 
