--- a/src/Components/ButtonType/Buttontype.scss
+++ b/src/Components/ButtonType/Buttontype.scss
@@ -7,11 +7,11 @@
     transition: 0.2s ease box-shadow;
     color: #fff;
     font-size: $fontSizeNormal;
-    // font-size: 1.2rem;
     border: none;
     background-color: transparent;
     height: 100%;
     text-align: start;
+    text-transform: capitalize;
 }
 
 .type-btn:hover {
