--- a/src/Components/ScrollButton/ScrollButton.scss
+++ b/src/Components/ScrollButton/ScrollButton.scss
@@ -24,6 +24,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: .2s;
 }
 
 .go-top__button .go-top__icon{
