--- a/src/Components/SpecialFilter/SpecialFilter.scss
+++ b/src/Components/SpecialFilter/SpecialFilter.scss
@@ -21,8 +21,8 @@
     align-items: center;
 
     .circle-type {
-      width: 25px;
-      height: 25px;
+      width: 2.5rem;
+      height: 2.5rem;
       border-radius: 50%;
       margin-right: 4px;
       display: flex;
