--- a/src/Pages/Pokedex/Pokedex.scss
+++ b/src/Pages/Pokedex/Pokedex.scss
@@ -19,6 +19,7 @@
       grid-template-columns: auto;
       grid-template-rows: auto;
       grid-template-areas:
+      "main-container"
       "main-container";
         background-color: #27254c;
         display: grid;
