--- a/src/Components/LeftContainer/LeftContainer.scss
+++ b/src/Components/LeftContainer/LeftContainer.scss
@@ -4,4 +4,28 @@
     // padding: 3rem 2rem;
     padding: 0rem;
   }
+
+  // .left-container > .special-filter__container {
+  //   display : none;
+  // }
  
+  @media (max-width:  768px) {
+
+    .left-container > .special-filter__container {
+      display : none;
+    }
+
+
+    // .pokedex-container {
+  
+    //   grid-template-columns: auto;
+    //   grid-template-rows: auto;
+    //   grid-template-areas:
+    //   "main-container"
+    //   "main-container";
+    //     background-color: #27254c;
+    //     display: grid;
+    //     box-shadow: rgb(0 0 0 / 80%) 5px 5px 55px inset;
+    //     padding: 1rem;
+    //   }
+  }
