--- a/src/Components/OptionsButtons/OptionsButtons.scss
+++ b/src/Components/OptionsButtons/OptionsButtons.scss
@@ -20,4 +20,12 @@
       .active {
         border: 3px solid #fff;
       }
+
+      .pointer {
+        cursor: pointer
+      }
+
+      .pointer:hover {
+        border: 3px solid #fff;
+      }
 }
